Finalizada revisión definitiva de la memoria (o eso espero) (#68)

--- a/memoria/tex/apendices/instalacion.tex
+++ b/memoria/tex/apendices/instalacion.tex
@@ -7,7 +7,7 @@ párrafos.
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  Primero de todo necesitamos descargar el código del repositorio del proyecto en github, el cual se puede encontrar en \url{https://github.com/JAntonioVR/Geometria-Fractal}. Para ello, mediante una terminal nos situamos en el directorio que deseemos y clonamos el repositorio:
+  Primero de todo necesitamos descargar el código del repositorio del proyecto en Github, el cual se puede encontrar en \url{https://github.com/JAntonioVR/Geometria-Fractal}. Para ello, mediante una terminal nos situamos en el directorio que deseemos y clonamos el repositorio:
 
   \begin{lstlisting}[language=bash]
 git clone git@github.com:JAntonioVR/Geometria-Fractal.git
