--- a/memoria/tex/capitulos/capitulo-5.tex
+++ b/memoria/tex/capitulos/capitulo-5.tex
@@ -23,7 +23,7 @@ Para usar la GPU, debemos especificarle a la API un fragmento de código program
 
 Por su parte, \textbf{WebGL} es una adaptación de OpenGL a JavaScript. Es decir, en lugar de C/C++ se emplea JavaScript como lenguaje cuyo código se ejecuta en CPU. Al igual que el propio OpenGL, utiliza GLSL para la programación de shaders. El rasgo más característico de WebGL es que, al utilizar JavaScript, es posible ejecutarlo en cualquier navegador web. Esta es la base de la gran ventaja de WebGL: su portabilidad. Una aplicación web programada en WebGL puede ser usada desde cualquier navegador con soporte, sin que el usuario tenga que instalar ningún tipo de dependencia y de forma totalmente independiente al sistema operativo que utilice el dispositivo o del fabricante de la GPU. Además, el propio JavaScript cuenta con soporte para manipular dinámicamente el DOM de un documento HTML y para la gestión de eventos. Esto, unido a la portabilidad, hace que WebGL sea la mejor opción que podemos elegir para este proyecto.
 
-Las aplicaciones web basadas en WebGL se utilizan para la visualización de imágenes en un elemento \verb|<canvas>| de HTML en los navegadores y sistemas que lo soporten\footnote{Esto se puede comprobar gracias a páginas dedicadas a ello como \href{https://get.webgl.org/}{esta página de testeo WebGL} o \href{http://webglreport.com/}{WebGL Report}} sin necesidad de plug-ins. El principal defecto tanto de WebGL como de otras APIs es la dificultad a la hora de querer comenzar a visualizar imágenes, pues tiene varios componentes complejos de enlazar en un principio. A continuación explicaremos el flujo de trabajo que utiliza WebGL y cómo podemos comenzar a utilizar la herramienta para visualizar fractales.
+Las aplicaciones web basadas en WebGL se utilizan para la visualización de imágenes en un elemento \verb|<canvas>| de HTML en los navegadores y sistemas que lo soporten\footnote{Esto se puede comprobar gracias a páginas dedicadas a ello como \href{https://get.webgl.org/}{\textcolor{blue}{esta página de testeo WebGL}} o \href{http://webglreport.com/}{\textcolor{blue}{WebGL Report}}} sin necesidad de plug-ins. El principal defecto tanto de WebGL como de otras APIs es la dificultad a la hora de querer comenzar a visualizar imágenes, pues tiene varios componentes complejos de enlazar en un principio. A continuación explicaremos el flujo de trabajo que utiliza WebGL y cómo podemos comenzar a utilizar la herramienta para visualizar fractales.
 
 \section{Componentes de WebGL}
 \label{section:componentes-wgl}
